타임리프 문법 수정 / 이다영 / 02-13 11:20
[주요 내용]

- 타임리프 문법 수정
- 비교목록 세션 초기화 수정

--- a/src/main/resources/templates/claim-view.html
+++ b/src/main/resources/templates/claim-view.html
@@ -150,7 +150,7 @@
     	}
     	
     	function claimDelete(type, no) {
-    		var url = "/claim-delete?type=" + type + "&no=" + no + "&knNo=" + [[${claim.knNo}]];
+    		var url = "/claim-delete?type=" + type + "&no=" + no + "&knNo=" + /*[[${claim.knNo}]]*/{};
     		if(confirm("정말로 불편사항 신고글을 삭제 하시겠습니까?")) {
     			location.replace(url);
     		}
