--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -545,7 +545,7 @@
     <script src="js/theme.min.js"></script>
     <script src="js/address.js"></script>
     <script type="text/javascript" th:inline="javascript" th:if="${session.loginMember != null}">
-    	var memberNo = [[${session.loginMember.memberNo}]];
+    	var memberNo = /*[[${session.loginMember.memberNo}]]*/{};
 	    function onClickHeart(id) {
 			var no = id;
 			id = '#heart' + id;
