--- a/src/main/resources/templates/mypage-3.html
+++ b/src/main/resources/templates/mypage-3.html
@@ -160,7 +160,7 @@
 			  
               <div class="col mb-2">
                 <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden"><img th:src="|img/어린이집/nursery${stat.index}.JPG|" height="300px" alt="Product image">
+                  <div class="card-img-top position-relative overflow-hidden"><img th:src="|img/어린이집/nursery${stat.index}.JPG|" alt="Product image">
                     <!-- Wishlist button-->
                     <button class="btn-wishlist-cgw1 btn-sm position-absolute top-0 end-0" type="button"
                       data-bs-toggle="tooltip" data-bs-placement="top" title="찜 목록 삭제"
