결제->대여목록 대여상태 기능 추가 /서진경/02-13 14:15
[상세내용]
-대여상태 기능 추가
 mypage-6.html
 pay.html
 pay.java
 toy-mapper.xml
-장바구니 리스트로 결제시 확인
 mypage-7.html - checkedCartNo 번호 바꿔서 결제 잘되는지 확인함

--- a/src/main/resources/templates/mypage-6.html
+++ b/src/main/resources/templates/mypage-6.html
@@ -187,11 +187,11 @@
 		     		  
 		     		   <th:block th:if="${pay.status == 'Y'}">
 	                    <div class="">대여중</div>
-	                    <button type="button" class="badge-cgw1 bg-secondary-cgw1 m-0 cgw30" th:onclick="rentalUpdate([[${rental.payNo}]]);">반납하기</button>
+	                    <button type="button" class="badge-cgw1 bg-secondary-cgw1 m-0 cgw30">반납하기</button>
 	                  </th:block>
 	                  <th:block th:if="${pay.status == 'A'}">
 	                    <div class="">주문완료</div>
-	                    <button type="button" class="badge-cgw1 bg-secondary-cgw1 m-0 cgw30" th:onclick="rentalDelete([[${rental.payNo}]], [[${rental.toyNo}]]);">대여취소</button>
+	                    <button type="button" class="badge-cgw1 bg-secondary-cgw1 m-0 cgw30">대여취소</button>
 	                  </th:block>
 	                  <th:block th:if="${pay.status == 'N'}">
 	                    <div class="">반납완료</div>
