--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -465,13 +465,13 @@
       </section>
 
       <!-- 장난감 대여 -->
-      <section id="toy" class="mb-lg-5">
+       <section id="toy" class="mb-lg-5">
         <div class="container px-0">
           <div class="row g-0">
             <span class="ps-1" style="font-weight: 700;">추천 상품</span>
             <div class="d-flex align-items-center justify-content-between mb-sm-3 mb-2">
               <h2 class="h3 mb-0"><span style="font-weight: 700;"> 장난감 대여</span></h2>
-              <a class="btn btn-outline-accent ms-3" href="toy-main.html">더 보기<i class="ci-arrow-right ms-2"></i></a>
+              <a class="btn btn-outline-accent ms-3" th:href="@{/toy-main}">더 보기<i class="ci-arrow-right ms-2"></i></a>
             </div>
           </div>
 
@@ -479,133 +479,26 @@
           <div class="tns-carousel tns-controls-static tns-controls-outside mx-xl-n4 mx-n2 px-xl-4 px-0">
             <div class="tns-carousel-inner row gx-xl-0 gx-3 mx-0" data-carousel-options="{&quot;items&quot;: 2, &quot;nav&quot;: true, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1,&quot;controls&quot;: false, &quot;gutter&quot;: 0},&quot;500&quot;:{&quot;items&quot;:2},&quot;768&quot;:{&quot;items&quot;:3}, &quot;1100&quot;:{&quot;items&quot;:4}, &quot;1278&quot;:{&quot;controls&quot;: true, &quot;nav&quot;: false, &quot;gutter&quot;: 30}}}">
               <!-- Product item-->
-              <div class="col py-3">
+              <div class="col py-3" th:if="${rcmToy != null}" th:each="rt : ${rcmToy}">
                 <article class="card h-100 border-0 shadow">
                   <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
+                    <a class="d-block" th:href="@{|/toy-detail?no=${rt.toyNo}|}"><img th:src="${rt.toyImg}" alt="Toy"></a>
                   </div>
                   <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
+                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" th:href="@{|/toy-detail?no=${rt.toyNo}|}">[[${rt.toyNm1}]]</a></h3>
                     <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
+                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">[[${#strings.replace(rt.toyPay,'.0','원')}]]</h4></div>
                   </div>
                   <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(132, 219, 0);">대여가능</span></div>
+                  	<div class="text-center mb-1 py-3 border-top">
+                  	 <span class="rent-state" style="color: rgb(132, 219, 0);" th:if="${rt.toyType} == null">대여가능</span>
+                  	 <span class="rent-state" style="color:rgb(235, 72, 72);" th:unless="${rt.toyType} == null">대여중</span>
+                    </div>
                   </div>
                 </article>
               </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(235, 72, 72);">대여중</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(132, 219, 0);">대여가능</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(235, 72, 72);">대여중</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(132, 219, 0);">대여가능</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(235, 72, 72);">대여중</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(132, 219, 0);">대여가능</span></div>
-                  </div>
-                </article>
-              </div>
-              <!-- Product item-->
-              <div class="col py-3">
-                <article class="card h-100 border-0 shadow">
-                  <div class="card-img-top position-relative overflow-hidden">
-                    <a class="d-block" href="toy-detail.html"><img src="img/ukids/index/장난감1.JPG" alt="Toy"></a>
-                  </div>
-                  <div class="card-body">
-                    <h3 class="product-title mb-2 fs-base"><a class="d-block text-truncate" href="toy-detail.html">페어리루즈비즈아트18000 비즈놀이 비즈공예 유아장난감</a></h3>
-                    <span class="me-2 fs-sm text-muted">대여료 (1일 기준)</span>
-                    <div class="d-flex align-items-center flex-wrap"><h4 class="mt-1 mb-0 fs-base text-darker">1600원</h4></div>
-                  </div>
-                  <div class="card-footer mt-n1 py-0 border-0">
-                    <div class="text-center mb-1 py-3 border-top"><span class="rent-state" style="color: rgb(235, 72, 72);">대여중</span></div>
-                  </div>
-                </article>
-              </div>
+              
+              
             </div>
           </div>
         </div>
