--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -187,7 +187,7 @@
             <span class="ps-1" style="font-weight: 700;">한 눈에 보기</span>
             <div class="d-flex align-items-center justify-content-between mb-sm-3 mb-2">
               <h2 class="h3 mb-0"><span style="font-weight: 700;">[[${address}]]</span> 어린이집·유치원 현황</h2>
-              <a class="btn btn-outline-accent ms-3" href="nursery-main.html">더 보기<i class="ci-arrow-right ms-2"></i></a>
+              <a class="btn btn-outline-accent ms-3" href="/kinder-main">더 보기<i class="ci-arrow-right ms-2"></i></a>
             </div>
           </div>
 
