--- a/src/main/resources/templates/mypage-4.html
+++ b/src/main/resources/templates/mypage-4.html
@@ -156,12 +156,12 @@
 								</tr>
 							</thead>
 							<tbody>
-								<th:block th:if="${nlist == null}">
+								<th:block th:if="${nlist.size == 0}">
 									<tr>
-										<td colspan="5">조회된 신청이 없습니다.</td>
+										<td colspan="5" class="cgw9">조회된 신청이 없습니다.</td>
 									</tr>
 								</th:block>
-								<th:block th:if="${nlist != null}">
+								<th:block th:if="${nlist.size != 0}">
 								<tr th:each="nclaim, stat : ${nlist}">
 									<td class="py-3 cgw9" th:text="|${stat.count}|"></td>
 									<td class="py-3 cgw9">
@@ -189,9 +189,10 @@
 						</table>
 					</div>
 					
-
+					<br>
  
 		          <!-- pagination -->
+		          <th:block th:if="${nlist.size != 0}">
 		         <nav class="d-flex justify-content-between pt-2 cgw31" aria-label="Page navigation">
 		            <ul class="pagination" id="prev">
 		              <li class="page-item"><button class="page-link" th:onclick="|moveNPage('/mypage-4?nPage=${nPageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</button></li>
@@ -215,6 +216,7 @@
 		                    class="ci-arrow-right ms-2"></i></button></li>
 		            </ul>
 		          </nav>  
+		          </th:block>
 		          <br><br>
 					
 					<!-- 유치원 불편사항신고조회 목록-->
@@ -231,12 +233,12 @@
 								</tr>
 							</thead>
 							<tbody>
-								<th:block th:if="${klist == null}">
+								<th:block th:if="${klist.size == 0}">
 									<tr>
-										<td colspan="5">조회된 신청이 없습니다.</td>
+										<td colspan="5" class="cgw9">조회된 신청이 없습니다.</td>
 									</tr>
 								</th:block>
-								<th:block th:if="${klist != null}">
+								<th:block th:if="${klist.size != 0}">
 								<tr th:each="kclaim, stat : ${klist}">
 									<td class="py-3 cgw9" th:text="|${stat.count}|"></td>
 									<td class="py-3 cgw9">
@@ -263,9 +265,10 @@
 							</tbody>
 						</table>
 					</div>
-					
+					<br>
 
 					<!-- pagination -->
+					<th:block th:if="${klist.size != 0}">
 		          <nav class="d-flex justify-content-between pt-2 cgw31" aria-label="Page navigation">
 		            <ul class="pagination" id="prev">
 		              <li class="page-item"><button class="page-link" th:onclick="|moveKPage('/mypage-4?page=${kPageInfo.prevPage}');|"><i class="ci-arrow-left me-2"></i>Prev</button></li>
@@ -288,7 +291,7 @@
 			           class="ci-arrow-right ms-2"></i></button></li>
 			         </ul>
 			        </nav>  
-			        
+			        </th:block>
 			        
 				</section>
 			</div>
